Add properties -Add sql initialize -Add jpa hibernate ddl as none

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,3 +4,9 @@ spring:
     url: jdbc:postgresql://localhost:5432/serviceLayerDB
     username: admin
     password: admin
+  sql:
+    init:
+      mode: always
+  jpa:
+    hibernate:
+      ddl-auto: none
