--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,6 +4,7 @@ spring:
     url: jdbc:postgresql://localhost:5432/serviceLayerDB
     username: admin
     password: admin
+    initialization-mode: always
   sql:
     init:
       mode: always
