Remove unnecessary TablesDAO interface -Move schema.sql and data.sql files to /src/main/resources/sql/ directory -Add to application.yml current directory of schema.sql and data.sql files

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,9 +5,13 @@ spring:
     username: admin
     password: admin
     initialization-mode: always
+
+
   sql:
     init:
       mode: always
+      schema-locations: classpath:/sql/schema.sql
+      data-locations: classpath:/sql/data.sql
   jpa:
     hibernate:
       ddl-auto: none
