Add properties of testcontainers -Add spring.datasource.url jdbc:tc:postgresql -Add  spring.datasource.driver-class-name: org.testcontainers -Add this properties instead TestDatabaseConfiguration

--- a/src/test/resources/application-test.yml
+++ b/src/test/resources/application-test.yml
@@ -1,5 +1,7 @@
 spring:
   datasource:
+    url: jdbc:tc:postgresql:15.1:///serviceLayerDB&TC_REUSABLE=true
+    driver-class-name: org.testcontainers.jdbc.ContainerDatabaseDriver
     username: admin
     password: admin
   sql:
